[tool.poetry]
name = "reflector"
version = "0.1.0"
description = ""
authors = ["Dax"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
